<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <!-- Note: combination of MaterialCardView and onCardDragging
             is better from visual perspective. However, since we are limited
             in time, a simpler solution has been implemented.
        -->

        <FrameLayout
            android:id="@+id/left_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_reject_outline"/>

        <FrameLayout
            android:id="@+id/right_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_accept_outline"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingBottom="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/tv_store_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp_placeholder"
                style="@style/TextAppearance.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/br_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:barrierMargin="24dp"
                app:constraint_referenced_ids="tv_store_title"
                tools:layout_editor_absoluteX="197dp"
                tools:layout_editor_absoluteY="60dp" />

            <TextView
                android:id="@+id/address_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_address"
                style="@style/TextAppearance.Primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/br_title" />

            <TextView
                android:id="@+id/tv_store_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp_placeholder"
                style="@style/TextAppearance.Secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_caption" />

            <TextView
                android:id="@+id/time_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tv_delivery_time"
                style="@style/TextAppearance.Primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_address" />

            <TextView
                android:id="@+id/tv_delivery_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp_placeholder"
                style="@style/TextAppearance.Secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_caption" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/br_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:barrierMargin="48dp"
                app:constraint_referenced_ids="tv_store_title,address_caption,tv_store_address,time_caption,tv_delivery_time"
                tools:layout_editor_absoluteX="23dp"
                tools:layout_editor_absoluteY="68dp" />

            <Button
                android:id="@+id/btn_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_reject"
                app:layout_constraintEnd_toStartOf="@+id/btn_accept"
                app:layout_constraintTop_toBottomOf="@id/br_info" />

            <Button
                android:id="@+id/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_accept"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/br_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>

